# deno_emit

./: .gitattributes  .gitignore  Cargo.toml  README.md  _build.ts  deno.jsonc  emit.generated.d.ts  emit.generated.js  emit_bg.wasm  mod.ts  rust-toolchain.toml  test.ts
.github/workflows/: ci.yml  release.yml
js/: README.md  _utils.ts  deno.json  emit.generated.js  mod.ts
lib/: deno_emit.generated.js  emit.generated.js
rs-lib/: Cargo.toml
rs-lib/src/: ast.rs  bundle_hook.rs  emit.rs  lib.rs  text.rs  transforms.rs
rs-lib/src/pack/: dts.rs  mod.rs
rs-lib/tests/: integration_test.rs
rs-lib/tests/integration/: in_memory_loader.rs  mod.rs  test_builder.rs
rs-lib/tests/pack/: Circular.txt  DefaultExport.txt  Enums.txt  ExportAll.txt  ExportDeclNoSpecifier.txt  ExportDefaultExpr.txt  JsonModule.txt  NamedImports.txt  NamespaceImports.txt  Overloads.txt  PrivateOptionalProperty.txt  ThisParam.txt  TsNamespaces.txt  Types.txt
rs-lib/tests/pack_dts/: Classes.txt  Enums.txt  Functions.txt
src/: ast.rs  bundle_hook.rs  emit.rs  lib.rs  transforms.rs
testdata/: circular1.ts  es_decorators.ts  escape.json  escape.ts  exports_with_alias.ts  js_module.js  json_import.ts  json_import_escape.ts  jsx_import_from_ts.ts  mod.ts  mod1.ts
testdata/import_map/: import_map.json
testdata/jsx/: main.tsx  out_react_jsx_custom_import_source.js
testdata/subdir/: circular2.ts  escape.json  foo.ts  foo2.ts  mod2.ts  more_decorators.ts
tests/: bundle_test.ts  common_test.ts  import_map_test.ts  jsx_test.ts  source_map_test.ts  transpile_test.ts  utils.ts
tests/__snapshots__/bundle/: circular.js  json_escapes.js  json_import.js  json_import_escape.js  minified_json_import.js  remote.js  setting_inlinesourcemap_does_not_produce_any_source_maps.js  setting_inlinesourcemap_to_true_produces_inline_source_maps.js  setting_sourcemap_to_true_and_inlinesourcemap_to_false_produces_external_source_maps.js.map  source.js
tests/__snapshots__/common/es_decorators/: bundle.js
tests/__snapshots__/common/es_decorators/transpile/: modules.json
tests/__snapshots__/common/es_decorators/transpile/local/: es_decorators.ts
tests/__snapshots__/common/es_decorators/transpile/local/subdir/: more_decorators.ts
tests/__snapshots__/common/export_specifier_with_alias/: bundle.js
tests/__snapshots__/common/export_specifier_with_alias/transpile/: modules.json
tests/__snapshots__/common/export_specifier_with_alias/transpile/local/: exports_with_alias.ts
tests/__snapshots__/common/export_specifier_with_alias/transpile/local/subdir/: foo.ts
tests/__snapshots__/common/exports/: bundle.js
tests/__snapshots__/common/exports/transpile/: modules.json
tests/__snapshots__/common/exports/transpile/local/: mod1.ts
tests/__snapshots__/common/exports/transpile/local/subdir/: mod2.ts  print_hello.ts
tests/__snapshots__/common/file_url_as_object/transpile/: modules.json
tests/__snapshots__/common/file_url_as_object/transpile/local/: hello_world.ts
tests/__snapshots__/common/hello_world_relative_path/: bundle.js
tests/__snapshots__/common/js/: bundle.js
tests/__snapshots__/common/js/transpile/: modules.json
tests/__snapshots__/common/js/transpile/local/: js_module.js
tests/__snapshots__/common/js/transpile/local/subdir/: foo.js
tests/__snapshots__/common/jsx_import_from_ts/: bundle.js
tests/__snapshots__/common/jsx_import_from_ts/transpile/: modules.json
tests/__snapshots__/common/jsx_import_from_ts/transpile/local/: jsx_import_from_ts.ts
tests/__snapshots__/common/jsx_import_from_ts/transpile/local/subdir/: app.jsx
tests/__snapshots__/common/load_override/: bundle.js
tests/__snapshots__/common/load_override/transpile/: modules.json
tests/__snapshots__/common/load_override/transpile/local/: src.ts
tests/__snapshots__/common/remote_url_as_object/: bundle.js
tests/__snapshots__/common/remote_url_as_object/transpile/: modules.json
tests/__snapshots__/common/remote_url_as_string/transpile/: deno.json  modules.json
tests/__snapshots__/common/top_level_await/: bundle.js
tests/__snapshots__/common/top_level_await/transpile/: modules.json
tests/__snapshots__/common/top_level_await/transpile/local/: top_level_await.ts
tests/__snapshots__/common/ts_decorators/: bundle.js
tests/__snapshots__/common/ts_decorators/transpile/: modules.json
tests/__snapshots__/common/ts_decorators/transpile/local/: ts_decorators.ts
tests/__snapshots__/import_map/embedded_import_map_takes_precedence_over_file/: bundle.js
tests/__snapshots__/import_map/embedded_import_map_takes_precedence_over_file/transpile/: modules.json
tests/__snapshots__/import_map/empty_import_map/: bundle.js
tests/__snapshots__/import_map/empty_import_map/transpile/local/: mod1.ts
tests/__snapshots__/import_map/local_file_set_as_absolute_path/transpile/: modules.json
tests/__snapshots__/jsx/jsx_default/: bundle.js
tests/__snapshots__/jsx/jsx_type_precompile/local/jsx/: main.tsx
tests/__snapshots__/jsx/jsx_type_preserve/: bundle.js
tests/__snapshots__/jsx/jsx_type_preserve/local/jsx/: main.tsx
tests/__snapshots__/jsx/jsx_type_reactjsxdev/local/jsx/: main.tsx
tests/__snapshots__/jsx/jsx_type_reactjsxdev_with_custom_import_source/local/jsx/: main.tsx
tests/__snapshots__/jsx/jsx_type_reactnative/transpile/: modules.json
tests/__snapshots__/transpile/absolute/: mapping.json
tests/__snapshots__/transpile/absolute/modules/: 0BJ1Cp_wwHSv6YnJzSlY2UlxpSc.js
tests/__snapshots__/transpile/remote/modules/: WKh_-mE6UYta1pB11lfX_WOvFQ8.js  jO4Cj24EIKVTiTvdPctAVhckzgg.js  kWDlQkpYLFWxtJdAejga3vZCeeM.js  nhMTTXGO1bgNtQ_bGZFJE0b7hWs.js  npEsX-46oQUgZNw2Jkxv5i4eWDM.js
tests/__snapshots__/transpile/source/: mapping.json
tests/__snapshots__/transpile/source/modules/: FX-W_GgTo-jcLMQCWKy5udxEtG0.js
tests/__snapshots__/transpile/url/: mapping.json
tests/__snapshots__/transpile/url/modules/: WPpXvFGuxwYeU5ay2bDrdG4fV_g.js  WStdDhyHbKYy_C9CJ39RDks1VaY.js  WzxVr2Q8XtUlLvHc6jsTVQR8Mnc.js  ebsv4XtKEF8sxrDsnkLX8K9VdOA.js
wasm/: Cargo.toml
wasm/src/: lib.rs
(+36 files in other folders)
