[workspace]
resolver = "2"
members = [
  "rs-lib",
  "wasm"
]

[workspace.dependencies]
anyhow = "1.0.44"
base64 = "0.21.5"
deno_graph = { version = "0.79.0", default-features = false, git = "https://github.com/bartlomieju/deno_graph", branch = "upgrade_swc_crates"  }
deno_ast = { version = "0.39.2", features = ["bundler", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"], git = "https://github.com/bartlomieju/deno_ast", branch = "bump_swc_crates" }
url = { version = "2.3.1" }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
