[workspace]
resolver = "2"
members = [
  "rs-lib",
  "wasm"
]

[workspace.dependencies]
anyhow = "1.0.44"
base64 = "0.21.5"
deno_graph = { version = "0.82.0", default-features = false }
deno_ast = { version = "0.42.0", features = ["bundler", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"] }
url = { version = "2.3.1" }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
