[package]
name = "deno_emit"
version = "0.15.0"
edition = "2021"
description = "module transpiling and emitting for deno"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_emit"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
deno_ast = { version = "0.24.0", features = ["bundler", "codegen", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"] }
deno_graph = "0.43.0"
escape8259 = "0.5.2"
futures = "0.3.17"
parking_lot = { version = "0.11.2" }

[dev-dependencies]
pretty_assertions = "1.0.0"
tokio = { version = "1.11.0", features = ["full"] }
