[package]
name = "deno_emit"
version = "0.31.1"
edition = "2021"
description = "module transpiling and emitting for deno"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_emit"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
deno_ast = { version = "0.31.5", features = ["bundler", "codegen", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"] }
deno_graph = "0.60.0"
escape8259 = "0.5.2"
futures = "0.3.17"
import_map = "0.15.0"
parking_lot = { version = "0.11.2" }
url = { version = "2.3.1" }

[dev-dependencies]
pretty_assertions = "1.0.0"
tokio = { version = "1.11.0", features = ["full"] }
