[package]
name = "deno_emit"
version = "0.37.0"
edition = "2021"
description = "module transpiling and emitting for deno"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_emit"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
deno_ast = { version = "0.33.3", features = ["bundler", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"] }
deno_graph = { version = "0.68.0", default-features = true }
escape8259 = "0.5.2"
futures = "0.3.17"
import_map = "0.18.1"
parking_lot = { version = "0.11.2" }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
tokio = { version = "1.11.0", features = ["full"] }
